[tool.poetry]
name = "carbon-chain"
version = "0.1.0"
description = "Carbon chain to show blockchain interactions and carbon footprint generated based on the same."
authors = ["Akshat Pande <akshat.pande@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
